# enrollments-api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  credentials.json  docker-compose.yml  package.json  pyproject.toml  pytest.ini  requirements.txt
app/: auth.py  dependencies.py  fields.py  main.py
app/core/: age_group_api.py  app.py  constants.py  db.py  rabbitmq.py  settings.py
app/repositories/: enrollment.py
app/routers/: __init__.py
app/routers/v1/: __init__.py  counter.py  enrollment.py
app/schemas/: counter.py  enrollment.py  filters.py
app/services/: counter.py  enrollment.py
app/tests/: conftest.py  test_enrollments.py  test_processor.py
app/utils/: external_requests.py  validators.py
consumer/: consumer.py
processor/: processor.py
